add bootstrap template

--- a/templates/default/src/index.html
+++ b/templates/default/src/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="page">
-        <h1>Webpack for front-end</h1>
+        <h1>Webpack for front-end. (Default Template)</h1>
     </div>
     <script src="./assets/js/lib/jquery.min.js"></script>
     <script src="assets/dist/app.bundle.js"></script>
